feat: basic working implementation
